--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,7 @@
 services:
   - type: web
-  name: flask-demo
+  name: flask-sqlite-demo
+  env: python
+  plan: free
+  buildCommand: ""
+  startCommand: "python app.py"
